--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,16 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.13.2",
+    "axios-cookiejar-support": "^6.0.5",
     "bcryptjs": "^3.0.3",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "puppeteer": "^24.34.0",
-    "ratemyprofessor-api": "^1.0.1"
+    "ratemyprofessor-api": "^1.0.1",
+    "tough-cookie": "^6.0.0"
   },
   "devDependencies": {
     "@prisma/client": "^5.10.2",
