--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
-  "dependencies": {
-    "axios": "^1.13.2"
+  "name": "ai-course-navigator-root",
+  "private": true,
+  "scripts": {
+    "install-all": "npm install && npm install --prefix frontend && npm install --prefix backend",
+    "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run dev --prefix backend\""
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
